--- a/public/register.html
+++ b/public/register.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <h1>REGISTER</h1>
-
+<p style="color: #FF6B00;; text-align: center; font-weight: bold; font-size: 20px;">Get Started</p> 
   <form id="registerForm">
     <label>Full Name
       <input type="text" name="name" placeholder="Enter your Full Name" required />
