--- a/public/login.html
+++ b/public/login.html
@@ -11,7 +11,7 @@
 <body>
     <h1>LOGIN</h1>
      
-    <!-- <p style="color: rgb(250, 165, 47);">Login to get started</p> -->
+     <p style="color: #FF6B00;; text-align: center; font-size: 50px;">Welcome Back</p> 
     <form  id="loginForm" action="/api/auth/login" method="POST">
 
         <label for="email">Email
